Bug 173610 - krita crashes when opening Filter -> Adjust -> Levels
Summary: krita crashes when opening Filter -> Adjust -> Levels
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tile manager (show other bugs)
Version: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-26 17:20 UTC by cs
Modified: 2008-11-09 11:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
when this jpg is loaded in krita it crashes while opening Levels the dialog. (28.22 KB, image/jpeg)
2008-10-26 17:25 UTC, cs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description cs 2008-10-26 17:20:50 UTC
Version:           2.0 beta-2 (using KDE 4.1.2)
OS:                Linux
Installed from:    SuSE RPMs

Just installed Koffice2-beta2 packages for opensuse 11.

Started Krita. Opened JPG-Image. When calling Filter -> Adjust -> Levels in the menu, krita crashes.

Here is the information the "KDE-Crashmanager" gives:

Anwendung: Krita (krita), Signal SIGSEGV
[?1034h[Thread debugging using libthread_db enabled]
[New Thread 0xb4136910 (LWP 14197)]
[New Thread 0xa74ffb90 (LWP 14215)]
[New Thread 0xa7e49b90 (LWP 14214)]
[New Thread 0xa864ab90 (LWP 14213)]
[New Thread 0xaf4feb90 (LWP 14212)]
[KCrash handler]
#6  0xb791f2f4 in KoColorConversionSystem::findBestPathImpl2 (this=0x833dff8, 
    srcNode=0x8521c78, dstNode=0x0, ignoreHdr=true, 
    ignoreColorCorrectness=true)
    at /usr/src/debug/koffice-1.9.98.1/libs/pigment/KoColorConversionSystem.cpp:416
#7  0xb791aa2d in KoColorConversionSystem::findBestPath (this=0x833dff8, 
    srcNode=0x0, dstNode=0x0)
    at /usr/src/debug/koffice-1.9.98.1/libs/pigment/KoColorConversionSystem.cpp:517
#8  0xb791b76e in KoColorConversionSystem::createColorConverters (
    this=0x833dff8, colorSpace=0xa5d1548, possibilities=@0xbff14078, 
    fromCS=@0xbff14070, toCS=@0xbff1406c)
    at /usr/src/debug/koffice-1.9.98.1/libs/pigment/KoColorConversionSystem.cpp:255
#9  0xb7924377 in KoColorSpace::createColorTransformation (this=0xa5d1548, 
    id=@0xbff141b4, parameters=@0xbff141d0)
    at /usr/src/debug/koffice-1.9.98.1/libs/pigment/KoColorSpace.cpp:442
#10 0xad67f90b in KisHSVAdjustmentFilter::process (this=0x8c0c308, srcInfo=
      {d = 0xbff14228}, dstInfo=
      {<KisConstProcessingInformation> = {d = 0xbff14220}, d = 0xbff142c8}, 
    size=@0xbff142c8, config=0xa73e8f8, progressUpdater=0x0)
    at /usr/src/debug/koffice-1.9.98.1/krita/plugins/filters/colorsfilters/kis_hsv_adjustment_filter.cpp:64
#11 0xb7beacf0 in KisFilter::process (this=0x8c0c308, src={d = 0xbff142f8}, 
    dst={<KisConstProcessingInformation> = {d = 0xbff142c0}, d = 0xbff142c8}, 
    size=@0xbff142c8, config=0xa73e8f8)
    at /usr/src/debug/koffice-1.9.98.1/krita/image/filter/kis_filter.cc:58
#12 0xb7da3b31 in KisFiltersModel::data (this=0x85e0770, index=@0xbff14614, 
    role=1)
    at /usr/src/debug/koffice-1.9.98.1/krita/ui/kis_filters_model.cc:171
#13 0xb5de3313 in QStyledItemDelegate::initStyleOption ()
   from /usr/lib/libQtGui.so.4
#14 0xb5de4244 in QStyledItemDelegate::sizeHint () from /usr/lib/libQtGui.so.4
#15 0xb5d75661 in QTreeView::indexRowSizeHint () from /usr/lib/libQtGui.so.4
#16 0xb5d759d2 in ?? () from /usr/lib/libQtGui.so.4
#17 0xb5d75c9e in ?? () from /usr/lib/libQtGui.so.4
#18 0xb5d76012 in QTreeView::updateGeometries () from /usr/lib/libQtGui.so.4
#19 0xb5d356a4 in QAbstractItemView::resizeEvent () from /usr/lib/libQtGui.so.4
#20 0xb58c986d in QWidget::event () from /usr/lib/libQtGui.so.4
#21 0xb5c00dd3 in QFrame::event () from /usr/lib/libQtGui.so.4
#22 0xb5c978ff in QAbstractScrollArea::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#23 0xb5d42b1f in QAbstractItemView::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#24 0xb5d7a784 in QTreeView::viewportEvent () from /usr/lib/libQtGui.so.4
#25 0xb5c99ea5 in ?? () from /usr/lib/libQtGui.so.4
#26 0xb68c6c3a in QCoreApplicationPrivate::sendThroughObjectEventFilters ()
   from /usr/lib/libQtCore.so.4
#27 0xb587180a in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#28 0xb587979a in QApplication::notify () from /usr/lib/libQtGui.so.4
#29 0xb762e2bd in KApplication::notify () from /usr/lib/libkdeui.so.5
#30 0xb68c7a61 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#31 0xb58c41fc in QWidgetPrivate::sendPendingMoveAndResizeEvents ()
   from /usr/lib/libQtGui.so.4
#32 0xb58cc8a6 in QWidgetPrivate::show_helper () from /usr/lib/libQtGui.so.4
#33 0xb58ccf63 in QWidget::setVisible () from /usr/lib/libQtGui.so.4
#34 0xb58ccd38 in QWidgetPrivate::showChildren () from /usr/lib/libQtGui.so.4
#35 0xb58cc8d1 in QWidgetPrivate::show_helper () from /usr/lib/libQtGui.so.4
#36 0xb58ccf63 in QWidget::setVisible () from /usr/lib/libQtGui.so.4
#37 0xb58ccd38 in QWidgetPrivate::showChildren () from /usr/lib/libQtGui.so.4
#38 0xb58cc8d1 in QWidgetPrivate::show_helper () from /usr/lib/libQtGui.so.4
#39 0xb58ccf63 in QWidget::setVisible () from /usr/lib/libQtGui.so.4
#40 0xb58ccd38 in QWidgetPrivate::showChildren () from /usr/lib/libQtGui.so.4
#41 0xb58cc8d1 in QWidgetPrivate::show_helper () from /usr/lib/libQtGui.so.4
#42 0xb58ccf63 in QWidget::setVisible () from /usr/lib/libQtGui.so.4
#43 0xb58ccd38 in QWidgetPrivate::showChildren () from /usr/lib/libQtGui.so.4
#44 0xb58cc8d1 in QWidgetPrivate::show_helper () from /usr/lib/libQtGui.so.4
#45 0xb58ccf63 in QWidget::setVisible () from /usr/lib/libQtGui.so.4
#46 0xb58ccd38 in QWidgetPrivate::showChildren () from /usr/lib/libQtGui.so.4
#47 0xb58cc8d1 in QWidgetPrivate::show_helper () from /usr/lib/libQtGui.so.4
#48 0xb58ccf63 in QWidget::setVisible () from /usr/lib/libQtGui.so.4
#49 0xb5cdf8bd in QDialog::setVisible () from /usr/lib/libQtGui.so.4
#50 0xb7d9ce86 in KisFilterHandler::showDialog (this=0x8ecb430)
    at /usr/src/debug/koffice-1.9.98.1/krita/ui/kis_filter_handler.cc:111
#51 0xb7d9db55 in KisFilterHandler::qt_metacall (this=0x8ecb430, 
    _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0xbff1578c)
    at /usr/src/debug/koffice-1.9.98.1/build/krita/ui/kis_filter_handler.moc:70
#52 0xb68dc730 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#53 0xb68dcb30 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#54 0xb586b591 in QAction::triggered () from /usr/lib/libQtGui.so.4
#55 0xb586beff in QAction::activate () from /usr/lib/libQtGui.so.4
#56 0xb5c49494 in ?? () from /usr/lib/libQtGui.so.4
#57 0xb5c49f42 in QMenu::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#58 0xb76f5cb5 in KMenu::mouseReleaseEvent () from /usr/lib/libkdeui.so.5
#59 0xb58c9a52 in QWidget::event () from /usr/lib/libQtGui.so.4
#60 0xb5c4c239 in QMenu::event () from /usr/lib/libQtGui.so.4
#61 0xb587182c in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#62 0xb587a081 in QApplication::notify () from /usr/lib/libQtGui.so.4
#63 0xb762e2bd in KApplication::notify () from /usr/lib/libkdeui.so.5
#64 0xb68c7a61 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#65 0xb587930e in QApplicationPrivate::sendMouseEvent ()
   from /usr/lib/libQtGui.so.4
#66 0xb58e39be in ?? () from /usr/lib/libQtGui.so.4
#67 0xb58e2add in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#68 0xb590b1bc in ?? () from /usr/lib/libQtGui.so.4
#69 0xb52382d9 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#70 0xb523b85b in ?? () from /usr/lib/libglib-2.0.so.0
#71 0xb523b9d8 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#72 0xb68f21f8 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#73 0xb590a885 in ?? () from /usr/lib/libQtGui.so.4
#74 0xb68c613a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#75 0xb68c62fa in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#76 0xb68c8995 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#77 0xb58716a7 in QApplication::exec () from /usr/lib/libQtGui.so.4
#78 0xb7ec9678 in kdemain (argc=1, argv=0xbff167f4)
    at /usr/src/debug/koffice-1.9.98.1/krita/main.cc:56
#79 0x080489b2 in main (argc=134575752, argv=0x80577d8)
    at /usr/src/debug/koffice-1.9.98.1/build/krita/krita_dummy.cpp:3
#0  0xffffe430 in __kernel_vsyscall ()
Comment 1 cs 2008-10-26 17:25:22 UTC
Created attachment 28164 [details]
when this jpg is loaded in krita it crashes while opening Levels the dialog.

When the attached image is loaded krita always crashes when opening Filter -> Adjustments -> Levels. The crash does not happen with other images.
Comment 2 Halla Rempt 2008-10-26 17:27:45 UTC
Could you also please add the complete konsole debug output?
Comment 3 Halla Rempt 2008-10-26 17:32:53 UTC
Ah, we can reproduce. 
Comment 4 cs 2008-10-26 19:07:16 UTC
(In reply to comment #2)
> Could you also please add the complete konsole debug output?
> 

kde4@sophia:/home/kde4> krita
krita(16230)/kdeui (KAction) KActionCollection::setComponentData: this does not work on a KActionCollection containing actions!
krita(16230)/koffice (filter manager) KoFilterManager::filterAvailable: The library  ""does not offer a check_ ""  function.

krita(16230)/kdeui (KAction) KActionCollection::setComponentData: this does not work on a KActionCollection containing actions!
X Error: BadAtom (invalid Atom parameter) 5
  Major opcode: 20 (X_GetProperty)
  Resource id:  0x0
Enchant dict for "en_US" 0x90f19b8
Enchant dict for "en_US" 0x90f19b8
Enchant dict for "en_US" 0x90f19b8
Enchant dict for "en_US" 0x90f19b8
Enchant dict for "en_US" 0x90f19b8
krita(16230)/kdeui (KAction) KActionCollection::setComponentData: this does not work on a KActionCollection containing actions!
QLayout: Attempting to add QLayout "" to QWidget "", which already has a layout
QLayout: Attempting to add QLayout "" to QWidget "", which already has a layout
KCrash: Application 'krita' crashing...
sock_file=/home/kde4/.kde4/socket-sophia/kdeinit4__1
Comment 5 Sven Langkamp 2008-10-27 08:18:32 UTC
The backtrace looks similar to the second backtrace from 147114.
Comment 6 Cyrille Berger 2008-11-09 11:27:45 UTC
SVN commit 881904 by berger:

definitive fix for the HSV adjustement filter for non-RGB color spaces

BUG:173610

 M  +2 -0      KoColorConversionSystem.cpp  
 M  +0 -2      KoColorConversionSystem_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=881904