definitive fix for the HSV adjustement filter for non-RGB color spaces

BUG:173610

svn path=/trunk/koffice/; revision=881904